592067:TISSQAUAT-724:"Sort by relevance" overlaps with selected filter black box issue fix

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
@@ -62895,7 +62895,7 @@ body.page-productGrid .facet-list.filter-opt {
 	.sort_by_wrapper{
 	display: inline-block;
     float: right;
-    top: 33px;
+    top: 34px;
     position: absolute;
     right: 0;
     }
